@@ -1,3 +1,10 @@
+2011-04-01  Adam Roben  <aroben@apple.com>
+
+        Cairo build fix
+
+        * WebProcess/WebPage/LayerTreeHost.cpp: Only pull in the LayerTreeHostCA derived classes for
+        PLATFORM(CA) ports.
+
 2011-03-31  Adam Roben  <aroben@apple.com>
 
         Split LayerTreeHostCA into a base class and derived Mac and Win classes
